# concinnity

./: .actrc  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
concinnity-client/: Cargo.toml  build.rs
concinnity-client/src/: blob.rs  config.rs  jobs.rs  lib.rs  ui.rs
concinnity-client/src/app/: anim_runtime.rs  chunk_stream.rs  dev_flags.rs  mesh_stream.rs  mod.rs  run.rs  state.rs  texture_stream.rs
concinnity-client/src/assets/: mod.rs
concinnity-client/src/audio/: mod.rs  system.rs
concinnity-client/src/directx/: auto_exposure.rs  backend.rs  barrier_translate.rs  context.rs  cull.rs  decal.rs  display_mode.rs  draw_iter.rs  dxc.rs  fog.rs  geometry_rebuild.rs  glass.rs  gpu_profile.rs  graph_exec.rs  hiz.rs  hot_reload.rs  input.rs  math.rs  mod.rs  parallel_encoder.rs  particle.rs  pass_timing.rs  pipeline.rs  planar.rs  probe.rs  probe_uniforms.rs  quality.rs  raymarch.rs  raytrace.rs  resize.rs  resources.rs  screenshot.rs  texture.rs  transient_pool.rs  window.rs
concinnity-client/src/ecs/: decompose.rs  mod.rs  registry.rs
concinnity-client/src/gfx/: animation.rs  backend.rs  backend_init.rs  bvh.rs  camera_controller.rs  chunk_window.rs  csm.rs  cursor.rs  decal.rs  display_mode.rs  draw_list.rs  draw_slot.rs  fps_controller.rs  fullscreen.rs  hdr_output.rs  input.rs  keymap.rs  lights.rs  mipmap.rs  mod.rs  parallel_ctx.rs  particles.rs  planar_reflection.rs  quality_preset.rs  reflection_probe.rs  rt_topology.rs  scene_reel.rs  settings.rs  shadow_schedule.rs  skinned_pool.rs  sprite.rs  streaming.rs  text.rs  transparent.rs  volumetric_fog.rs
concinnity-client/src/hud/: debug_hud.rs  fps_counter.rs  mod.rs  stat_hud.rs
concinnity-client/src/metal/: auto_exposure.rs  backend.rs  context.rs  cull.rs  decal.rs  display_mode.rs  fog.rs  frame_pacing.rs  glass.rs  gpu_profile.rs  graph_exec.rs  hiz.rs  hot_reload.rs  input.rs  instanced.rs  math.rs  mod.rs  parallel_encoder.rs  particle.rs  pass_timing.rs  pipeline.rs  planar.rs  probe.rs  quality.rs  raymarch.rs  raytrace.rs  scoped_encoder.rs  screenshot.rs  shader_layout.rs  streaming.rs  texture.rs  transient.rs  transient_pool.rs  transparent.rs  uniforms.rs  water.rs  window_delegate.rs
concinnity-client/src/physics/: convert.rs  mod.rs  system.rs
concinnity-client/src/vulkan/: auto_exposure.rs  backend.rs  barrier_translate.rs  composite.rs  context.rs  cull.rs  decal.rs  descriptor_layout.rs  device.rs  draw.rs  fog.rs  glass.rs  gpu_profile.rs  graph_exec.rs  hiz.rs  hot_reload.rs  init.rs  input.rs  main.rs  math.rs  mod.rs  parallel_encoder.rs  particle.rs  pass_timing.rs  pipeline.rs  planar.rs  probe.rs  probe_uniforms.rs  quality.rs  raymarch.rs  raytrace.rs  render_pass.rs  screenshot.rs  shadow.rs  swapchain.rs  texture.rs  transient_pool.rs  window.rs
concinnity-cook/: Cargo.toml  build.rs
concinnity-cook/src/: asset.rs  audio_clip.rs  blob.rs  cache.rs  color_lut.rs  cubemap.rs  environment_map.rs  fbx.rs  file.rs  font.rs  glb.rs  gltf.rs  import.rs  lib.rs  mesh_compile.rs  mesh_reimport.rs  pipeline.rs  shader.rs  texture.rs  wavefront.rs
concinnity-cook/src/asset_impls/: audio_clip.rs  color_lut.rs  cubemap_texture.rs  environment_map.rs  file.rs  font.rs  mesh.rs  mod.rs  procedural_mesh.rs  room.rs  sdf_volume.rs  shader_stage.rs  skinned_mesh.rs  texture.rs  voxel_chunk.rs
concinnity-cook/src/check/: cross_reference.rs  cubemap_texture.rs  environment_map.rs  instanced_prop.rs  mesh.rs  mod.rs  prop.rs  scene_reel.rs  sdf_volume.rs  shader.rs  texture.rs  voxel_chunk.rs  voxel_world.rs
concinnity-cook/src/world/: camera_shot.rs  companion.rs  config.rs  defaults.rs  expand.rs  light_rig.rs  main_menu.rs  material_palette.rs  mod.rs  option_select.rs  prefab.rs  room.rs  scene_import.rs  shader.rs  slider.rs
concinnity-core/: Cargo.toml  build.rs
concinnity-core/src/: lib.rs  paths.rs  result.rs
concinnity-core/src/assets/: animation.rs  audio_clip.rs  audio_command.rs  audio_emitter.rs  block_type.rs  camera3d.rs  camera_shot.rs  children.rs  collider.rs  color_lut.rs  controls_command.rs  cubemap_texture.rs  debug_hud.rs  decal.rs  despawn_request.rs  directional_light.rs  engine_defaults.rs  environment_map.rs  file.rs  font.rs  fps_counter.rs  frame_input.rs  glass_panel.rs  global_transform.rs  graphics_config.rs  held.rs  hit_region.rs  input_key.rs  instanced_prop.rs  interactable.rs  joint.rs  key_binding.rs  layout_container.rs  lifetime.rs  light_rig.rs  main_menu.rs  material.rs  material_palette.rs  mesh.rs  mesh_renderer.rs  (+46 more)
concinnity-core/src/blob/: mod.rs
concinnity-core/src/check/: cross_reference.rs  mod.rs
concinnity-core/src/ecs/: asset_api.rs  asset_id.rs  mod.rs  registry.rs
concinnity-core/src/geometry/: chunk_gen.rs  extrude.rs  glass_quad.rs  heightfield.rs  mod.rs  primitives.rs  room.rs  skybox.rs  terrain.rs  voxel.rs  water_grid.rs
concinnity-core/src/gfx/: auto_exposure.rs  camera.rs  chunk_coord.rs  dropdown.rs  frustum.rs  lod.rs  mesh_payload.rs  mesh_seed.rs  mod.rs  overlay.rs  profile.rs  range_alloc.rs  render_types.rs  rt_reflections.rs  scroll_layout.rs  settings.rs  skinning.rs  ssao.rs  ssgi.rs  ssr.rs
concinnity-core/src/world/: find.rs  mod.rs  preset.rs
concinnity-docs/: build.rs  (+2 more)
concinnity-eas/: Cargo.toml
concinnity-eas/src/: access.rs  column.rs  command.rs  entity.rs  event.rs  join.rs  join_bench.rs  lib.rs  mask.rs  resource.rs  sparse.rs  storage.rs  tick.rs
concinnity-editor/: Cargo.toml  build.rs  cbindgen.toml
concinnity-editor/src/: anim_reload.rs  ffi.rs  lib.rs  main.rs  shader_reflect.rs
concinnity-editor/src/app/: add.rs  build.rs  check.rs  commands.rs  debug_hook.rs  mod.rs  pending.rs  rm.rs  run.rs  ws_client.rs
concinnity-editor/src/cli/: add.rs  build.rs  check.rs  explain.rs  list.rs  mod.rs  new.rs  rm.rs
concinnity-editor/src/debug/: commands.rs  mod.rs  runtime_spawn.rs  server.rs
concinnity-toolchain/: Cargo.toml
concinnity-toolchain/src/: lib.rs
examples/bistro/: Cargo.toml  README.md  build.rs  main.rs  world.jsonl
examples/common/: Cargo.toml  lib.rs
(+319 files in other folders)
